demos/04_license_plate_gitops/b_app/manifests/model-1-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: licenseplate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: licenseplate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: licenseplate
        deploymentconfig: licenseplate
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: licenseplate
          image: >-
            image-registry.openshift-image-registry.svc:5000/gitops-demo/licenseplate:v3
          ports:
            - containerPort: 5000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
