demos/04_license_plate_gitops/b_app/manifests/licenseplate-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: licenseplate
spec:
  to:
    kind: Service
    name: licenseplate
    weight: 100
  port:
    targetPort: 5000-tcp
  wildcardPolicy: None
